crates/keron-lang/tests/corpus/errors/check/reconcile_block_bad_step.keron
val a: Symlink = symlink(source = "to-a", target = "from-a")

val n: Int = 1

reconcile {
  a
  n
  a -> n
}
